--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>uk.ac.warwick.wsbc</groupId>
   <artifactId>HedgehogSnakeFilter_quimp</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <!-- Name and licencing and other project informations -->
   <name>HedgehogSnakeFilter_quimp</name>
  <build>
