--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>uk.ac.warwick.wsbc</groupId>
     <artifactId>pom-quimp-plugin</artifactId>
-    <version>16.08.01-SNAPSHOT</version>
+    <version>16.10.01</version>
     <relativePath/>
     <!-- http://stackoverflow.com/questions/6003831/parent-relativepath-points-at-my-com-mycompanymyproject-instead-of-org-apache -->
   </parent>
@@ -11,31 +11,52 @@
   <groupId>uk.ac.warwick.wsbc</groupId>
   <artifactId>HedgehogSnakeFilter-quimp</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
   <!-- Name and licencing and other project informations -->
   <name>HedgehogSnakeFilter-quimp</name>
- <build>
+  <scm>
+    <connection>scm:git:file://localhost/home/baniuk/Documents/Repos/HedgehogSnakeFilter-quimp</connection>
+    <developerConnection>scm:git:file://localhost/home/baniuk/Documents/Repos/HedgehogSnakeFilter-quimp</developerConnection>
+    <url>http://www.trac-wsbc.linkpc.net:8080/cgit/HedgehogSnakeFilter-quimp.git/</url>
+    <tag>HEAD</tag>
+  </scm>
+  <issueManagement>
+    <system>Trac</system>
+    <url>http://www.trac-wsbc.linkpc.net:8080/trac/QuimP/</url>
+  </issueManagement>
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
       <plugin>
-      <groupId>org.jacoco</groupId>
-      <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.7.6.201602180812</version>
-      <executions>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.6.201602180812</version>
+        <executions>
           <execution>
-          <id>default-prepare-agent</id>
-          <goals>
+            <id>default-prepare-agent</id>
+            <goals>
               <goal>prepare-agent</goal>
-          </goals>
+            </goals>
           </execution>
-      </executions>
-    </plugin>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+          <goals>install site</goals>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-   <reporting>
+  <reporting>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -65,11 +86,11 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>3.6</version>
       </plugin>
-       <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.7.6.201602180812</version>
-</plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.6.201602180812</version>
+      </plugin>
     </plugins>
   </reporting>
 </project>
